@@ -235,7 +235,7 @@ else
 		}
 		if (!$importfailed)
 		{
-			$relguid = sha1(uniqid(true).mt_rand());
+			$relguid = sha1(uniqid('',true).mt_rand());
 			$nzb = new NZB();
 			$propername = false;
 			$cleanerName = $namecleaning->releaseCleaner($subject, $groupName);
@@ -246,10 +246,18 @@ else
 				$cleanName = $cleanerName['cleansubject'];
 				$propername = $cleanerName['properlynamed'];
 			}
-			if ($propername === true)
-				$data[] = array('name' => $subject, 'searchname' => $cleanName, 'totalpart' => $totalFiles, 'groupid' => $groupID, 'adddate' => date('Y-m-d H:i:s'), 'guid' => $relguid, 'rageid' => '-1', 'postdate' => $postdate['0'], 'fromname' => $postername['0'], 'size' => $totalsize, 'passwordstatus' => ($page->site->checkpasswordedrar == "1" ? -1 : 0), 'haspreview' => '-1', 'categoryid' => '7010', 'nfostatus' => '-1', 'nzbstatus' => '1', 'relnamestatus' => '6');
+			if (empty($postername[0]))
+				$poster = '';
 			else
-				$data[] = array('name' => $subject, 'searchname' => $cleanName, 'totalpart' => $totalFiles, 'groupid' => $groupID, 'adddate' => date('Y-m-d H:i:s'), 'guid' => $relguid, 'rageid' => '-1', 'postdate' => $postdate['0'], 'fromname' => $postername['0'], 'size' => $totalsize, 'passwordstatus' => ($page->site->checkpasswordedrar == "1" ? -1 : 0), 'haspreview' => '-1', 'categoryid' => '7010', 'nfostatus' => '-1', 'nzbstatus' => '1');
+				$poster = $postername[0];
+			if (empty($postdate[0]))
+				$posteddate = $date = date("Y-m-d H:i:s");
+			else
+				$posteddate = $postdate[0];
+			if ($propername === true)
+				$data[] = array('name' => $subject, 'searchname' => $cleanName, 'totalpart' => $totalFiles, 'groupid' => $groupID, 'adddate' => date('Y-m-d H:i:s'), 'guid' => $relguid, 'rageid' => '-1', 'postdate' => $posteddate, 'fromname' => $poster, 'size' => $totalsize, 'passwordstatus' => ($page->site->checkpasswordedrar == "1" ? -1 : 0), 'haspreview' => '-1', 'categoryid' => '7010', 'nfostatus' => '-1', 'nzbstatus' => '1', 'relnamestatus' => '6');
+			else
+				$data[] = array('name' => $subject, 'searchname' => $cleanName, 'totalpart' => $totalFiles, 'groupid' => $groupID, 'adddate' => date('Y-m-d H:i:s'), 'guid' => $relguid, 'rageid' => '-1', 'postdate' => $posteddate, 'fromname' => $poster, 'size' => $totalsize, 'passwordstatus' => ($page->site->checkpasswordedrar == "1" ? -1 : 0), 'haspreview' => '-1', 'categoryid' => '7010', 'nfostatus' => '-1', 'nzbstatus' => '1');
 			if($nzb->copyNZBforImport($relguid, $nzba))
 			{
 				if ( $nzbCount % 100 == 0)
@@ -285,7 +293,7 @@ else
 			}
 			else
 			{
-				$db->queryExec(sprintf("DELETE FROM releases WHERE postdate = %s AND size = %d", $db->escapeString($postdate['0']), $db->escapeString($totalsize)));
+				$db->queryExec(sprintf("DELETE FROM releases WHERE postdate = %s AND size = %d", $db->escapeString($posteddate), $db->escapeString($totalsize)));
 				echo "\033[38;5;".$color_write_error."mFailed copying NZB, deleting release from DB.\033[0m\n";
 				$importfailed = true;
 			}
