@@ -112,72 +112,6 @@ if (!empty($argc) || $page->isPostBack() )
 				// Make a fake message object to use to check the blacklist.
 				$msg = array("Subject" => $firstname['0'], "From" => $fromname, "Message-ID" => "");
 
-				// If the release is in our DB already then don't bother importing it.
-				if ($usenzbname && $skipCheck !== true)
-				{
-					$usename = str_replace('.nzb', '', ($viabrowser ? $browserpostednames[$nzbFile] : basename($nzbFile)));
-					if ($db->dbSystem() == 'mysql')
-					{
-						$dupeCheckSql = sprintf("SELECT * FROM releases WHERE name = %s AND postdate - INTERVAL %d HOUR <= %s AND postdate + INTERVAL %d HOUR > %s", $db->escapeString($usename), $crosspostt, $db->escapeString($date), $crosspostt, $db->escapeString($date));
-						$res = $db->queryOneRow($dupeCheckSql);
-						$dupeCheckSql = sprintf("SELECT * FROM releases WHERE name = %s AND postdate - INTERVAL %d HOUR <= %s AND postdate + INTERVAL %d HOUR > %s", $db->escapeString($subject), $crosspostt, $db->escapeString($date), $crosspostt, $db->escapeString($date));
-						$res1 = $db->queryOneRow($dupeCheckSql);
-					}
-					else if ($db->dbSystem() == 'pgsql')
-					{
-						$dupeCheckSql = sprintf("SELECT * FROM releases WHERE name = %s AND postdate - INTERVAL '%d HOURS' <= %s AND postdate + INTERVAL '%d HOURS' > %s", $db->escapeString($usename), $crosspostt, $db->escapeString($date), $crosspostt, $db->escapeString($date));
-						$res = $db->queryOneRow($dupeCheckSql);
-						$dupeCheckSql = sprintf("SELECT * FROM releases WHERE name = %s AND postdate - INTERVAL '%d HOURS' <= %s AND postdate + INTERVAL '%d HOURS' > %s", $db->escapeString($subject), $crosspostt, $db->escapeString($date), $crosspostt, $db->escapeString($date));
-						$res1 = $db->queryOneRow($dupeCheckSql);
-					}
-
-					// Only check one binary per nzb, they should all be in the same release anyway.
-					$skipCheck = true;
-
-					// If the release is in the DB already then just skip this whole procedure.
-					if ($res !== false || $res1 !== false)
-					{
-						if (!empty($argc))
-						{
-							echo ("Skipping ".$usename.", it already exists in your database.\n");
-							flush();
-						}
-						else
-							$retval.= "Skipping ".$usename.", it already exists in your database<br />";
-
-						$importfailed = true;
-						break;
-					}
-				}
-
-
-				if (!$usenzbname && $skipCheck !== true)
-				{
-					$usename = $db->escapeString($name);
-					if ($db->dbSystem() == 'mysql')
-						$dupeCheckSql = sprintf("SELECT name FROM releases WHERE name = %s AND postdate - INTERVAL %d HOUR <= %s AND postdate + INTERVAL %d HOUR > %s", $db->escapeString($firstname['0']), $crosspostt, $db->escapeString($date), $crosspostt, $db->escapeString($date));
-					else if ($db->dbSystem() == 'pgsql')
-						$dupeCheckSql = sprintf("SELECT name FROM releases WHERE name = %s AND postdate - INTERVAL '%d HOURS' <= %s AND postdate + INTERVAL '%d HOURS' > %s", $db->escapeString($firstname['0']), $crosspostt, $db->escapeString($date), $crosspostt, $db->escapeString($date));
-					$res = $db->queryOneRow($dupeCheckSql);
-
-					// Only check one binary per nzb, they should all be in the same release anyway.
-					$skipCheck = true;
-
-					// If the release is in the DB already then just skip this whole procedure.
-					if ($res !== false)
-					{
-						if (!empty($argc))
-						{
-							echo "Skipping ".$subject.", it already exists in your database.\n";
-							flush();
-						}
-						else
-							$retval.= "Skipping ".$subject.", it already exists in your database<br />";
-						$importfailed = true;
-						break;
-					}
-				}
-
 				// Groups.
 				$groupArr = array();
 				foreach($file->groups->group as $group)
@@ -229,11 +163,13 @@ if (!empty($argc) || $page->isPostBack() )
 
 			if (!$importfailed)
 			{
-				$relguid = sha1(uniqid(true).mt_rand());
+				$relguid = sha1(uniqid('',true).mt_rand());
 				$nzb = new NZB();
 				$propername = false;
 				// Removes everything after yEnc in subject.
-				$subject = utf8_encode(trim(preg_replace('/yEnc.*?$/', 'yEnc', preg_replace('/(\(\d+\/\d+\))*$/', 'yEnc', $firstname['0'])));
+				$partless = preg_replace('/(\(\d+\/\d+\))?(\(\d+\/\d+\))?(\(\d+\/\d+\))?(\(\d+\/\d+\))?(\(\d+\/\d+\))?(\(\d+\/\d+\))?(\(\d+\/\d+\))?$/', 'yEnc', $firstname['0']);
+				$partless = preg_replace('/yEnc.*?$/i', 'yEnc', $partless);
+				$subject = utf8_encode(trim($partless));
 				$cleanerName = $namecleaning->releaseCleaner($subject, $groupName);
 				if (!is_array($cleanerName))
 					$cleanName = $cleanerName;
@@ -242,37 +178,45 @@ if (!empty($argc) || $page->isPostBack() )
 					$cleanName = $cleanerName['cleansubject'];
 					$propername = $cleanerName['properlynamed'];
 				}
-				try {
-					if ($propername === true)
-						$relID = $db->queryInsert(sprintf("INSERT INTO releases (name, searchname, totalpart, groupid, adddate, guid, rageid, postdate, fromname, size, passwordstatus, haspreview, categoryid, nfostatus, nzbstatus, relnamestatus) VALUES (%s, %s, %d, %d, NOW(), %s, -1, %s, %s, %s, %d, -1, 7010, -1, 1, 6)", $db->escapeString($subject), $db->escapeString($cleanName), $totalFiles, $groupID, $db->escapeString($relguid), $db->escapeString($postdate['0']), $db->escapeString($postername['0']), $db->escapeString($totalsize), ($page->site->checkpasswordedrar == "1" ? -1 : 0)));
-					else
-						$relID = $db->queryInsert(sprintf("INSERT INTO releases (name, searchname, totalpart, groupid, adddate, guid, rageid, postdate, fromname, size, passwordstatus, haspreview, categoryid, nfostatus, nzbstatus) VALUES (%s, %s, %d, %d, NOW(), %s, -1, %s, %s, %s, %d, -1, 7010, -1, 1)", $db->escapeString($subject), $db->escapeString($cleanName), $totalFiles, $groupID, $db->escapeString($relguid), $db->escapeString($postdate['0']), $db->escapeString($postername['0']), $db->escapeString($totalsize), ($page->site->checkpasswordedrar == "1" ? -1 : 0)));
-				} catch (PDOException $err) {
-					if ($this->echooutput)
-						echo "\033[01;31m.".$err."\n";
-				}
+				if (empty($postername[0]))
+					$poster = '';
+				else
+					$poster = $postername[0];
+				if (empty($postdate[0]))
+					$posteddate = $date = date("Y-m-d H:i:s");
+				else
+					$posteddate = $postdate[0];
+				if ($propername === true)
+					$relID = $db->queryInsert(sprintf("INSERT INTO releases (name, searchname, totalpart, groupid, adddate, guid, rageid, postdate, fromname, size, passwordstatus, haspreview, categoryid, nfostatus, nzbstatus, relnamestatus) VALUES (%s, %s, %d, %d, NOW(), %s, -1, %s, %s, %s, %d, -1, 7010, -1, 1, 6)", $db->escapeString($subject), $db->escapeString($cleanName), $totalFiles, $groupID, $db->escapeString($relguid), $db->escapeString($posteddate), $db->escapeString($poster), $db->escapeString($totalsize), ($page->site->checkpasswordedrar == "1" ? -1 : 0)));
+				else
+					$relID = $db->queryInsert(sprintf("INSERT INTO releases (name, searchname, totalpart, groupid, adddate, guid, rageid, postdate, fromname, size, passwordstatus, haspreview, categoryid, nfostatus, nzbstatus) VALUES (%s, %s, %d, %d, NOW(), %s, -1, %s, %s, %s, %d, -1, 7010, -1, 1)", $db->escapeString($subject), $db->escapeString($cleanName), $totalFiles, $groupID, $db->escapeString($relguid), $db->escapeString($posteddate), $db->escapeString($poster), $db->escapeString($totalsize), ($page->site->checkpasswordedrar == "1" ? -1 : 0)));
 
-				if(!isset($error) && $relID !== false);
+				if (isset($relid) && $relid == false)
 				{
-					if($nzb->copyNZBforImport($relguid, $nzba))
+					echo "\n\033[38;5;".$color_skipped."mSkipping ".$subject.", it already exists in your database.\033[0m\n";
+					@unlink($nzbFile);
+					flush();
+					$importfailed = true;
+					continue;
+				}
+				if($nzb->copyNZBforImport($relguid, $nzba))
+				{
+					$message = "Imported NZB successfully. Subject: ".$firstname['0']."\n";
+					if (!empty($argc))
 					{
-
-						$message = "Imported NZB successfully. Subject: ".$firstname['0']."\n";
-						if (!empty($argc))
-						{
-							echo ($message."\n");
-							flush();
-						}
-						else
-							$retval.= $message."<br />";
+						echo ($message."\n");
+						flush();
 					}
 					else
-					{
-						$db->queryExec(sprintf("DELETE FROM releases WHERE postdate = %s AND size = %d", $db->escapeString($postdate['0']), $db->escapeString($totalsize)));
-						echo "Failed copying NZB, deleting release from DB.\n";
-						$importfailed = true;
-					}
+						$retval.= $message."<br />";
 				}
+				else
+				{
+					$db->queryExec(sprintf("DELETE FROM releases WHERE guid = %s AND postdate = %s AND size = %d", $db->escapeString($relguid), $db->escapeString($posteddate), $db->escapeString($totalsize)));
+					echo "Failed copying NZB, deleting release from DB.\n";
+					$importfailed = true;
+				}
+			}
 				$nzbCount++;
 				@unlink($nzbFile);
 			}
