@@ -201,7 +201,7 @@ class Import
 
 			if (!$importfailed)
 			{
-				$relguid = sha1(uniqid(true).mt_rand());
+				$relguid = sha1(uniqid('',true).mt_rand());
 				$nzb = new NZB();
 				$propername = false;
 				$cleanerName = $namecleaning->releaseCleaner($subject, $groupName);
