@@ -1201,7 +1201,7 @@ class Releases
 					$cleanName = $cleanerName['cleansubject'];
 					$propername = $cleanerName['properlynamed'];
 				}
-				$relguid = sha1(uniqid(true).mt_rand());
+				$relguid = sha1(uniqid('',true).mt_rand());
 
 				if ($propername != false)
 					$relid = $db->queryInsert(sprintf('INSERT INTO releases (name, searchname, totalpart, groupid, adddate, guid, rageid, postdate, fromname, size, passwordstatus, haspreview, categoryid, nfostatus, relnamestatus) VALUES (%s, %s, %d, %d, NOW(), %s, -1, %s, %s, %d, %d, -1, 7010, -1, 6)', $db->escapeString($cleanRelName), $db->escapeString($cleanName), $rowcol['totalfiles'], $rowcol['groupid'], $db->escapeString($relguid), $db->escapeString($rowcol['date']), $db->escapeString($rowcol['fromname']), $rowcol['filesize'], ($page->site->checkpasswordedrar == '1' ? -1 : 0)));
@@ -1765,7 +1765,7 @@ class Releases
 		$timer10 = TIME();
 		if ($this->completion > 100)
 			echo "You have an invalid setting for completion\n";
-		if ($this->completion > 0 && $this->completion < 100)
+		if ($this->completion > 0 && $this->completion <= 100)
 		{
 			$resrel = $db->query(sprintf('SELECT id, guid FROM releases WHERE completion < %d AND completion > 0', $this->completion));
 			if(count($resrel) > 0)
